# freedv-integrations

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-integrations.yml
appimage/: AppRun-KA9Q.sh  make-appimage.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt  ReportingController.cpp  ReportingController.h
src/flex/: CMakeLists.txt  Dockerfile  FlexTcpTask.cpp  FlexTcpTask.h  FlexVitaTask.cpp  FlexVitaTask.h  README.md  main.cpp
src/ka9q/: CMakeLists.txt  README.md  main.cpp
